team member added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Finexo
+              SHIVTARA
             </span>
           </a>
 
@@ -99,8 +99,8 @@
                 <div class="col-md-6 ">
                   <div class="detail-box">
                     <h1>
-                      Crypto <br>
-                      Currency
+                      SHIVTARA <br>
+                      ENTERPRISE
                     </h1>
                     <p>
                       Explicabo esse amet tempora quibusdam laudantium, laborum eaque magnam fugiat hic? Esse dicta aliquid error repudiandae earum suscipit fugiat molestias, veniam, vel architecto veritatis delectus repellat modi impedit sequi.
@@ -295,7 +295,7 @@
         <div class="col-md-6">
           <div class="detail-box">
             <h3>
-              We Are Finexo
+              We Are SHIVTARA
             </h3>
             <p>
               There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
